--- a/index.html
+++ b/index.html
@@ -2,8 +2,102 @@
 <html>
 <head>
   <title>Small HTMLs</title>
+  <link rel="icon" href="./sh.svg">
 </head>
-<body>
-  
+<body style="--mainhight: 10em;--textheight: 5em;">
+  <style>
+    body{
+        background-color: #222222;
+        color: #ffffff;
+      --header-color: #666666;
+    }
+    #header{
+      display: inline-block;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: var(--mainhight);
+      background:  var(--header-color);
+    }
+    #bottom{
+      width: 100%;
+      display: inline-block;
+      background: var(--header-color);
+      position: fixed; 
+      left: 0px;
+      bottom:0px;
+    }
+    #body{
+	
+    }
+
+.headerentry{
+   display: inline-block;
+   
+}
+.logo{
+   height: var(--mainhight);
+   z-index: 1;
+}
+.logoImg{
+   height:100%;
+}
+#impressumLink{
+   color: white;
+}
+      .linkStyle{
+          color: #ffffff;
+      }
+      #body{
+          position: absolute;
+          left:0px;
+          top: var(--mainhight);
+          width: 100%;
+          height: fit-content;
+      }
+    a{
+      color: #ffffff
+
+    }
+  </style>
+  <div id="header">
+<div class="logo"><img class="logoImg" src="./sh.svg"/> </div>
+  <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
+      <a href="/" class="linkStyle" style="font-weight: bold;">Home</a> &nbsp;&nbsp;&nbsp;
+      <a href="/OpenHTML/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
+  </div></div>
+  </div>
+  <div id="body">
+      <!--<h4>Welcome on the Freeversuals Website!</h4>
+      If someone asks, you were never hear!<br>
+      But if noone asks you tell every body!<br>
+      But when should you tell everybody, because tomorrow <br>
+      maybe someone will ask you! <br>
+      So is it a Paradox?<br>
+      I don't know! Maybe! <br>
+      But lets asume that you are going to die soon TM. <br>
+      Then what should you do? <br>
+      Should you tell everybody you see, or not? <br>
+      The problem is someone could ask you anyway, even after your death!<br>
+      So it is a paradoxon!<br>
+      But is there anyway to find a solution? <br>
+      Maybe? Just not now!<br>
+      I think this text will be a placeholder not for long.<br>
+      Someone might ask wheater 321 + 123 * 213 equals 94572 or 26199 or 197136<br>
+      Someone saied that this example is to complicated, <br>
+      but I think it is just suprising that it works so well <br>
+      but maybe because all numbers can't be devidet by 2. <br>
+      So I hope this text is now long enougth.<br>
+      The only thing to say left is: <br>
+      <br>
+      If someone reads this, you shouldn't see this,because it should be hidden-->
+  </div>
+  <div id="bottom">
+<div>
+  <!--<a href="/impressum/index.html" id="impressumLink">Impressum</a>-->&nbsp;&nbsp;<a href="./info/">Info</a>
+</div>
+  </div>
 </body>
+
 </html>
