Repaired Logo on Infopage

--- a/info/index.html
+++ b/info/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Small HTMLs</title>
-  <link rel="icon" href="../sh.svg">
+  <link rel="icon" href="/sh.svg">
 </head>
 <body style="--mainhight: 10em;--textheight: 5em;">
   <style>
