--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Small HTMLs</title>
-  <link rel="icon" href="./sh.svg">
+  <link rel="icon" href="/sh.svg">
 </head>
 <body style="--mainhight: 10em;--textheight: 5em;">
   <style>
@@ -62,10 +62,10 @@
     }
   </style>
   <div id="header">
-<div class="logo"><img class="logoImg" src="./sh.svg"/> </div>
+<div class="logo"><img class="logoImg" src="/sh.svg"/> </div>
   <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
       <a href="/" class="linkStyle" style="font-weight: bold;">Home</a> &nbsp;&nbsp;&nbsp;
-      <a href="/OpenHTML/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
+      <a href="/open_html/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
   </div></div>
   </div>
   <div id="body">
