--- a/info/index.html
+++ b/info/index.html
@@ -65,7 +65,7 @@
 <div class="logo"><img class="logoImg" src="sh.svg"/> </div>
   <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
       <a href="/" class="linkStyle" >Home</a> &nbsp;&nbsp;&nbsp;
-      <a href="/OpenHTML/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
+      <a href="/open_html/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
   </div></div>
   </div>
   <div id="body">
