Fixed Logo on openHTML and info again

--- a/open_html/index.html
+++ b/open_html/index.html
@@ -62,7 +62,7 @@
     }
   </style>
   <div id="header">
-<div class="logo"><img class="logoImg" src="sh.svg"/> </div>
+<div class="logo"><img class="logoImg" src="/sh.svg"/> </div>
   <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
       <a href="/" class="linkStyle" >Home</a> &nbsp;&nbsp;&nbsp;
       <a href="/open_html/" class="linkStyle" style="font-weight: bold;">OpenHTML</a> &nbsp;&nbsp;&nbsp;
