Added main part of OpenHTML

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           top: var(--mainhight);
           width: 100%;
           height: fit-content;
+          text-align: center;
       }
     a{
       color: #ffffff
@@ -69,33 +70,11 @@
   </div></div>
   </div>
   <div id="body">
-      <!--<h4>Welcome on the Freeversuals Website!</h4>
-      If someone asks, you were never hear!<br>
-      But if noone asks you tell every body!<br>
-      But when should you tell everybody, because tomorrow <br>
-      maybe someone will ask you! <br>
-      So is it a Paradox?<br>
-      I don't know! Maybe! <br>
-      But lets asume that you are going to die soon TM. <br>
-      Then what should you do? <br>
-      Should you tell everybody you see, or not? <br>
-      The problem is someone could ask you anyway, even after your death!<br>
-      So it is a paradoxon!<br>
-      But is there anyway to find a solution? <br>
-      Maybe? Just not now!<br>
-      I think this text will be a placeholder not for long.<br>
-      Someone might ask wheater 321 + 123 * 213 equals 94572 or 26199 or 197136<br>
-      Someone saied that this example is to complicated, <br>
-      but I think it is just suprising that it works so well <br>
-      but maybe because all numbers can't be devidet by 2. <br>
-      So I hope this text is now long enougth.<br>
-      The only thing to say left is: <br>
-      <br>
-      If someone reads this, you shouldn't see this,because it should be hidden-->
+      Sadly I hadn't time to find any content for the home site.
   </div>
   <div id="bottom">
 <div>
-  <!--<a href="/impressum/index.html" id="impressumLink">Impressum</a>-->&nbsp;&nbsp;<a href="./info/">Info</a>
+  &nbsp;&nbsp;<a href="./info/">Info</a>&nbsp;&nbsp;
 </div>
   </div>
 </body>
