--- a/info/index.html
+++ b/info/index.html
@@ -29,7 +29,7 @@
       bottom:0px;
     }
     #body{
-	
+        text-align: center;
     }
 
 .headerentry{
@@ -69,7 +69,13 @@
   </div></div>
   </div>
   <div id="body">
-      <a href="https://github.com/smallhtmls">Github</a>
+        This project is part of the Freeversuals Project, but mostly organized by the main developer (nprogramDev). <br>
+        The only purpose of this project is to organize Small Webtools in one place, which doesn't ever change the URL. 
+        <br>
+        <br>
+      <a href="https://github.com/smallhtmls">Small HTMLs Github</a>
+      <a href="https://github.com/Freeversuals">Freeversuals Github</a>
+      <a href="https://github.com/NprogramDev">NprogramDevs Github</a>
   </div>
   <div id="bottom">
 <div>
