--- a/open_html/index.html
+++ b/open_html/index.html
@@ -29,7 +29,7 @@
       bottom:0px;
     }
     #body{
-	
+        text-align: center;
     }
 
 .headerentry{
@@ -70,7 +70,14 @@
   </div>
   <div id="body">
     <br>
-      <a href="/open_html/v1/"> Version 1</a>
+        <p>Open HTML is a small Website to break the Safari "Sandbox" and open html files with css and js on IOS or IPadOS.</p>
+        <p>Feature Infos are under /open_html/v1/feature.txt or v2.</p>
+        <p> The version below is the simplest Type of this Website. The only function of this Website is to open HTMLs.</p>
+      <a href="/open_html/v1/"> Version 1.1.0</a><br>
+        <p>Version 2 is a bit more complicated. In version 2 I have added Windows and Settings, but it still consists out of one file. (Doesn't support Touch Devices yet!)</p>
+        <a href="/open_html/v2/"> Version 2.1.0</a><br>
+        <p>Version 3-a (alpha) is a version for which you need to host a server (currently nodejs) and it consists of multiple files and folders. It adds (not yet) support for Filesystem and Terminal accsess.</p>
+        <a href="/open_html/v3/a.txt"> Version 3.0.0-a1 ZIP Download</a><br>
   </div>
   <div id="bottom">
 <div>
