--- a/index.html
+++ b/index.html
@@ -1,82 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Small HTMLs</title>
-  <link rel="icon" href="/sh.svg">
-</head>
-<body style="--mainhight: 10em;--textheight: 5em;">
-  <style>
-    body{
-        background-color: #222222;
-        color: #ffffff;
-      --header-color: #666666;
-    }
-    #header{
-      display: inline-block;
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: var(--mainhight);
-      background:  var(--header-color);
-    }
-    #bottom{
-      width: 100%;
-      display: inline-block;
-      background: var(--header-color);
-      position: fixed; 
-      left: 0px;
-      bottom:0px;
-    }
-    #body{
-	
-    }
-
-.headerentry{
-   display: inline-block;
-   
-}
-.logo{
-   height: var(--mainhight);
-   z-index: 1;
-}
-.logoImg{
-   height:100%;
-}
-#impressumLink{
-   color: white;
-}
-      .linkStyle{
-          color: #ffffff;
-      }
-      #body{
-          position: absolute;
-          left:0px;
-          top: var(--mainhight);
-          width: 100%;
-          height: fit-content;
-          text-align: center;
-      }
-    a{
-      color: #ffffff
-
-    }
-  </style>
-  <div id="header">
-<div class="logo"><img class="logoImg" src="/sh.svg"/> </div>
-  <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
-      <a href="/" class="linkStyle" style="font-weight: bold;">Home</a> &nbsp;&nbsp;&nbsp;
-      <a href="/open_html/" class="linkStyle">OpenHTML</a> &nbsp;&nbsp;&nbsp;
-  </div></div>
-  </div>
-  <div id="body">
-      Sadly I hadn't time to find any content for the home site.
-  </div>
-  <div id="bottom">
-<div>
-  &nbsp;&nbsp;<a href="./info/">Info</a>&nbsp;&nbsp;
-</div>
-  </div>
-</body>
-
+    <head>
+        <title>Small HTMLs</title>
+        <link rel="icon" href="/assets/img/logo.svg" />
+        <link rel="favicon" href="/assets/img/logo.svg" />
+        <link rel="stylesheet" href="/assets/css/tailwind.css" />
+        <script
+            src="/assets/js/dist/index/index.js"
+            type="module"
+            defer
+        ></script>
+    </head>
+    <body class="p-5 prose">
+        <div class="h-min w-full pb-5 rounded-xl flex flex-row items-center">
+            <img
+                src="/assets/img/logo.svg"
+                alt="SmallHTMLs logo"
+                class="rounded-xl h-32 inline-block pr-5"
+            /><span class="text-4xl inline-block align-baseline"
+                >SmallHTMLs</span
+            >
+        </div>
+        <div id="root"></div>
+    </body>
 </html>
