Fixed some things

--- a/open_html/index.html
+++ b/open_html/index.html
@@ -1,89 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Small HTMLs</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Small HTMLs - Redirect...</title>
   <link rel="icon" href="/sh.svg">
 </head>
-<body style="--mainhight: 10em;--textheight: 5em;">
-  <style>
-    body{
-        background-color: #222222;
-        color: #ffffff;
-      --header-color: #666666;
-    }
-    #header{
-      display: inline-block;
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: var(--mainhight);
-      background:  var(--header-color);
-    }
-    #bottom{
-      width: 100%;
-      display: inline-block;
-      background: var(--header-color);
-      position: fixed; 
-      left: 0px;
-      bottom:0px;
-    }
-    #body{
-        text-align: center;
-    }
-
-.headerentry{
-   display: inline-block;
-   
-}
-.logo{
-   height: var(--mainhight);
-   z-index: 1;
-}
-.logoImg{
-   height:100%;
-}
-#impressumLink{
-   color: white;
-}
-      .linkStyle{
-          color: #ffffff;
-      }
-      #body{
-          position: absolute;
-          left:0px;
-          top: var(--mainhight);
-          width: 100%;
-          height: fit-content;
-      }
-    a{
-      color: #ffffff
-
-    }
-  </style>
-  <div id="header">
-<div class="logo"><img class="logoImg" src="/sh.svg"/> </div>
-  <div style="text-align: center;z-index:2;"><div style="position:absolute;left:0px;width:100%;top:var(--textheight);">
-      <a href="/" class="linkStyle" >Home</a> &nbsp;&nbsp;&nbsp;
-      <a href="/open_html/" class="linkStyle" style="font-weight: bold;">OpenHTML</a> &nbsp;&nbsp;&nbsp;
-  </div></div>
-  </div>
-  <div id="body">
-    <br>
-        <p>Open HTML is a small Website to break the Safari "Sandbox" and open html files with css and js on IOS or IPadOS.</p>
-        <p>Feature Infos are under /open_html/v1/feature.txt or v2.</p>
-        <p> The version below is the simplest Type of this Website. The only function of this Website is to open HTMLs.</p>
-      <a href="/open_html/v1/"> Version 1.1.0</a><br>
-        <p>Version 2 is a bit more complicated. In version 2 I have added Windows and Settings, but it still consists out of one file. (Doesn't support Touch Devices yet!)</p>
-        <a href="/open_html/v2/"> Version 2.1.0</a><br>
-        <p>Version 3-a (alpha) is a version for which you need to host a server (currently nodejs) and it consists of multiple files and folders. It adds (not yet) support for Filesystem and Terminal accsess.</p>
-        <a href="/open_html/v3/a.txt"> Version 3.0.0-a1 ZIP Download</a><br>
-  </div>
-  <div id="bottom">
-<div>
-  <!--<a href="/impressum/index.html" id="impressumLink">Impressum</a>-->&nbsp;&nbsp;<a href="/info/">Info</a>
-</div>
-  </div>
+<body style="color: white;background-color: #1d232a;">
+    <h1>If you are not Redirected</h1>
+    <h2><a href="/index.html?site=open_html" style="color: white; font-style:normal; text-decoration: none;">Click Here!</a></h2>
+    <script>
+        location.href = "/index.html?site=open_html";
+    </script>
 </body>
-
 </html>
