--- a/open_html/v2/index.html
+++ b/open_html/v2/index.html
@@ -42,6 +42,7 @@
     }
 </style>
 <div style="background-color:#000000;top:0px;position:absolute;width:90%">
+    <a href="/open_html/" style="color: white; font-style:normal; text-decoration: none;" class="unselectable">&nbsp;&nbsp;&nbsp;←&nbsp;&nbsp;&nbsp;</a>
     <label for="addPWindow" id="lableaddPWindow" class="unselectable">&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;</label>
     <input id="addPWindow" type="file" style="position: fixed; top: -100em">
     <span id="settings" class="unselectable" onclick="settings = new Settings();">
