Complete htpkg (bundle) support (with @NprogramDev)

--- a/open_html/v1/index.html
+++ b/open_html/v1/index.html
@@ -37,7 +37,13 @@
                 style="position: absolute; left: -1000px"
             />
         </div>
-        <iframe id="iframe1" width="100%" height="95%" frameborder="0">
+        <iframe
+            id="iframe1"
+            width="100%"
+            height="100%"
+            frameborder="0"
+            src="./startpage.html"
+        >
         </iframe>
         <script
             src="/assets/js/dist/open_html/v1/index.js"
