[HTPKG] New Works most of the time\n Recursive works too!

--- a/open_html/v1/index.html
+++ b/open_html/v1/index.html
@@ -30,7 +30,7 @@
                 >&nbsp;&nbsp;&nbsp;&larr;&nbsp;&nbsp;&nbsp;</a
             >|<label for="fileinput" id="lablefileinput"
                 >&nbsp;&nbsp;&nbsp;+&nbsp;&nbsp;&nbsp;</label
-            >|
+            >|&nbsp;<span id="title">Open HTML</span>
             <input
                 id="fileinput"
                 type="file"
@@ -42,7 +42,7 @@
             width="100%"
             height="100%"
             frameborder="0"
-            src="./startpage.html"
+            src="/open_html/v1/startpage.html"
         >
         </iframe>
         <script
