--- a/open_html/v1/startpage.html
+++ b/open_html/v1/startpage.html
@@ -4,14 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Start Page</title>
-        <style>
-            body {
-                background-color: rgb(29, 29, 29);
-                color: #d8d1d1;
-                font-family: "Gill Sans", "Gill Sans MT", Calibri,
-                    "Trebuchet MS", sans-serif;
-            }
-        </style>
+        <link rel="stylesheet" href="/open_html/v1/assets/css/common.css">
     </head>
     <body>
         <h1>Open HTML</h1>
